# cs490-hw2

hw2/: hw2.py  (+1 more)
hw3/: hw3.py  pyproject.toml
hw3/output/: complex.csv  data.jsonl  error_analysis.csv  perf.csv  perturbation_examples.txt  perturbed_appositive_person_insertion.jsonl  preds_Alireza1044__albert-base-v2-mnli_adjective_to_relative_clause.json  preds_Alireza1044__albert-base-v2-mnli_appositive_person_insertion.json  preds_Alireza1044__albert-base-v2-mnli_original.json  preds_Alireza1044__albert-base-v2-mnli_parenthetical_insertion.json  preds_PavanNeerudu__gpt2-finetuned-mnli_adjective_to_relative_clause.json  preds_PavanNeerudu__gpt2-finetuned-mnli_appositive_person_insertion.json  preds_PavanNeerudu__gpt2-finetuned-mnli_original.json  preds_PavanNeerudu__gpt2-finetuned-mnli_parenthetical_insertion.json  preds_typeform__distilbert-base-uncased-mnli_adjective_to_relative_clause.json  preds_typeform__distilbert-base-uncased-mnli_appositive_person_insertion.json  preds_typeform__distilbert-base-uncased-mnli_original.json  preds_typeform__distilbert-base-uncased-mnli_parenthetical_insertion.json  preds_typeform__mobilebert-uncased-mnli_adjective_to_relative_clause.json  preds_typeform__mobilebert-uncased-mnli_appositive_person_insertion.json  preds_typeform__mobilebert-uncased-mnli_original.json  preds_typeform__mobilebert-uncased-mnli_parenthetical_insertion.json  preds_valhalla__distilbart-mnli-12-6_adjective_to_relative_clause.json  preds_valhalla__distilbart-mnli-12-6_appositive_person_insertion.json  preds_valhalla__distilbart-mnli-12-6_original.json  (+5 more)
